Fixed the Training Pathway lightbox being clickable on mobile.

--- a/user/themes/academydeliver/css-compiled/template.css
+++ b/user/themes/academydeliver/css-compiled/template.css
@@ -1209,7 +1209,7 @@ img.inline-left {
   .text-and-lightbox-wrapper .overview-text {
     padding-right: 2rem; }
   @media only all and (max-width: 47.938em) {
-    .text-and-lightbox-wrapper .overview-lightbox img.lightbox {
+    .text-and-lightbox-wrapper .overview-lightbox a {
       display: none; } }
   @media only all and (min-width: 48em) {
     .text-and-lightbox-wrapper .overview-lightbox img.no-lightbox {
