--- a/user/themes/academydeliver/scss/template/_custom.scss
+++ b/user/themes/academydeliver/scss/template/_custom.scss
@@ -64,7 +64,7 @@ img.inline-left {
   .overview-text {
     padding-right: 2rem;
   }
-  .overview-lightbox img.lightbox {
+  .overview-lightbox a {
     @include breakpoint(mobile-only) {
         display: none;
     }
